[tool.poetry]
name = "repl_python3_Zoro"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
data = "^0.4"
logger = "^1.4"
resources = "^0.0.1"
uvloop = "^0.15.2"
flask = "^2.0.1"
google = "^3.0.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
